binutils/testsuite/binutils-all/i386/empty.d
@@ -6,7 +6,7 @@
 Displaying notes found in: .note.gnu.property
   Owner                 Data size	Description
   GNU                  0x0000000c	NT_GNU_PROPERTY_TYPE_0
-      Properties: x86 feature: 
+      Properties: x86 feature: <None>
   GNU                  0x00000018	NT_GNU_PROPERTY_TYPE_0
       Properties: x86 ISA used: <None>
 	x86 feature used: x86
