binutils/testsuite/binutils-all/x86-64/pr21231b.s
@@ -22,7 +22,7 @@
 	.long 0xc0010000	/* pr_type.  */
 	.long 4f - 3f		/* pr_datasz.  */
 3:
-	.long -1
+	.long 0x7fffffff
 4:
 	.p2align 3
 	/* GNU_PROPERTY_X86_ISA_1_NEEDED */
